---------------------------------------------------------------------------------------------------
Version: 0.69.33
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 0.69.32
Date: 2025-05-24
  Changes:
    - Simple Adjustable inserter compatibility
    - Smart inserters compatibility
    - Fixed a bug that caused some trashsteroids to hover in place... menacingly! It affected some users, primarily when loading new mod configurations.
---------------------------------------------------------------------------------------------------
Version: 0.69.31
Date: 2025-05-24
  Changes:
    - Armored fluid wagon now takes fluid wagons instead of cargo wagons.
    - Reordered recipe/items of several rubia recipes and items.
    - Fixed a big bug where Muluna would cause all rail materials to be automatically banned.
    - Broadened compatibility for logistic containers, including Bob's Logistics and AAI containers.
    - Rubia assets version up, because new bacterial sludge icon.
---------------------------------------------------------------------------------------------------
Version: 0.69.30
Date: 2025-05-24
  Changes:
    - Nerfed armored train to be more of a gas-guzzler to distinguish it more.
    - Fixed Cerys incompatibility due to temperature nonsense.
---------------------------------------------------------------------------------------------------
Version: 0.69.29
Date: 2025-05-24
  Changes:
    - Fixed the addition of the Chinese locale file.
---------------------------------------------------------------------------------------------------
Version: 0.69.28
Date: 2025-05-24
  Changes:
    - Chinese localization added. Full credit goes to rlcyyg1108. Thank you so much!
---------------------------------------------------------------------------------------------------
Version: 0.69.27
Date: 2025-05-24
  Changes:
    - Fixed crashes from previous patch.